--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "url": "https://github.com/lasso-js/lasso-modules-client.git"
   },
   "scripts": {
-    "test": "npm run mocha && npm run jshint",
-    "mocha": "node_modules/.bin/mocha --ui bdd --reporter spec test/",
-    "jshint": "node_modules/.bin/jshint src/"
+    "test": "npm run mocha-client && npm run mocha-transport && npm run jshint",
+    "mocha-client": "node_modules/.bin/mocha --ui bdd --reporter spec test/",
+    "mocha-transport": "node_modules/.bin/mocha --ui bdd --reporter spec test/ transport/test/",
+    "jshint": "node_modules/.bin/jshint src/ transport/src/"
   },
   "author": "Patrick Steele-Idem <pnidem@gmail.com>",
   "maintainers": "Patrick Steele-Idem <pnidem@gmail.com>",
   "dependencies": {
+    "raptor-polyfill": "^1.0.2",
+    "lasso-package-root": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
